--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,8 @@ name = "pypi"
 
 [packages]
 
-django = "*"
-channels = "*"
-channels-redis = "*"
-
+aioamqp = "==0.13.0"
+celery = "==4.3.0"
+channels_rabbitmq = "==1.1.5"
 
 [dev-packages]
-
